implimented translation in landingpage component

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,5 +5,16 @@
       "MY_WORK": "Meine Arbeiten",
       "LANGUAGE_DE": "DE",
       "LANGUAGE_EN": "EN"
+    },
+
+    "LANDING_PAGE": {
+      "HELLO": "Hallo! Ich bin Galina",
+      "FRONTEND": "FRONTEND",
+      "DEVELOPER": "ENTWICKLERIN",
+      "SCROLL": "SCROLLEN"
     }
+
+
+
+
   }
