--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,5 +12,16 @@
     "FRONTEND": "FRONTEND",
     "DEVELOPER": "DEVELOPER",
     "SCROLL": "SCROLL"
+  },
+
+  "WORK_TOGETHER": {
+    "LET_WORK": "Let's work",
+    "TOGETHER": "together",
+    "I_AM": "I am",
+    "LOCATION": "located in Thuringia",
+    "REMOTE": "open to work remote",
+    "INTRO": "Hi, I'm a Frontend Developer based near Erfurt. I'm driven by the endless possibilities in IT, and I'm passionate about creating visually stunning and user-friendly websites and applications. My ability to solve complex problems and my passion for programming make me a valuable member of your team.",
+    "CONTACT_MESSAGE": "If you think I’d be a good match for your projects, contact me!",
+    "SEND_MESSAGE": "Send a message"
   }
   }
