--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,24 +26,31 @@
         "TITLE": "Skills",
         "GROWTH_MINDSET": "Growth Mindset"
     },
-
     "WORK": {
         "TITLE": "My Work",
         "SUBTITLE": "Explore a selection of my work here - Interact with projects to see my skills in action.",
         "PROJECT": {
-          "TITLE": {
-            "JOIN": "Join",
-            "POLLO_LOCO": "El Pollo Loco",
-            "POKEDEX": "Pokédex"
-          },
-          "DESCRIPTION": {
-            "JOIN": "Task Manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.",
-            "POLLO_LOCO": "Jump, run and throw game based on object-oriented approach. Help Pepe to find coins and tabasco salsa to fight against the crazy hen.",
-            "POKEDEX": "Based on a PokéAPI a simple library that provides and catalogues Pokemon information."
-          },
-          "TECHNOLOGIES": "Technologies",
-          "LIVE_TEST": "Live test",
-          "GITHUB": "GitHub"
+            "TITLE": {
+                "JOIN": "Join",
+                "POLLO_LOCO": "El Pollo Loco",
+                "POKEDEX": "Pokédex"
+            },
+            "DESCRIPTION": {
+                "JOIN": "Task Manager inspired by the Kanban System. Create and organize tasks using drag and drop functions, assign users and categories.",
+                "POLLO_LOCO": "Jump, run and throw game based on object-oriented approach. Help Pepe to find coins and tabasco salsa to fight against the crazy hen.",
+                "POKEDEX": "Based on a PokéAPI a simple library that provides and catalogues Pokemon information."
+            },
+            "TECHNOLOGIES": "Technologies",
+            "LIVE_TEST": "Live test",
+            "GITHUB": "GitHub"
         }
-      }
+    },
+    "REFERENCES": {
+        "TITLE": "Need a team player?",
+        "SUBTITLE": "Here is what my colleagues said about me",
+        "REFERENCE_1": "\"Galina was always fully committed to our project. She completed her tasks very carefully and independently and had good time management. With her attention to detail, she ensured that nothing was overlooked. Even in stressful phases, she was always positive and radiated a good mood. Because of her empathy and willingness to help, she was also important for the morale of the team. Her great determination contributed significantly to the success of the project.\"",
+        "REFERENCE_2": "\"Galina was a fantastic colleague. Her ambition and her independent and confident approach to tackling and overcoming challenges drove our project forward and played a significant role in delivering well-functioning results by the deadline. I would be happy to work with Galina again.\"",
+        "REFERENCE_3": "\"I had the pleasure of working with Galina on two different group projects. Her adaptability within the team and her exceptional willingness to tackle the most complex tasks made her an invaluable asset in both projects. Even outside of group work, I observed a steep learning curve in her. Particularly impressive was her object-oriented project, which she executed professionally in a very short time. Working with Galina made the group projects always extremely pleasant and smooth.\"",
+        "PROJECT": "Project"
+    }
 }
