translated the headline of privacy policy

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -77,5 +77,8 @@
 
       "IMPRINT": {
         "TITLE": "Imprint"
-      }
+      },
+
+      "PRIVACY_POLICY": {
+        "TITLE": "Privacy policy"}
 }
