edited about me section, with german translation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -14,7 +14,7 @@
     },
     "WORK_TOGETHER": {
         "LET_WORK": "Lass uns",
-        "TOGETHER": "zusammenarbeiten",
+        "TOGETHER": "gemeinsam arbeiten",
         "I_AM": "Ich bin",
         "LOCATION": "in Thüringen ansässig",
         "REMOTE": "bereit für Remote Arbeit",
