--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,14 +2,14 @@
     "HEADER": {
         "ABOUT_ME": "Über mich",
         "SKILLS": "Fähigkeiten",
-        "MY_WORK": "Meine Projekte",
+        "MY_WORK": "Projekte",
         "LANGUAGE_DE": "DE",
         "LANGUAGE_EN": "EN"
     },
     "LANDING_PAGE": {
         "HELLO": "Hallo! Ich bin Galina",
         "FRONTEND": "FRONTEND",
-        "DEVELOPER": "ENTWICKLERIN",
+        "DEVELOPER": "DEVELOPER",
         "SCROLL": "SCROLLEN",
         "SCROLL_RESP": "Scrollen"
     },
@@ -28,7 +28,7 @@
         "GROWTH_MINDSET": "Wachstums Mindset"
     },
     "WORK": {
-        "TITLE": "Meine Projekte",
+        "TITLE": "Projekte",
         "SUBTITLE": "Erkunde eine Auswahl meiner Arbeiten hier - Interagiere mit Projekten, um meine Fähigkeiten in Aktion zu sehen.",
         "PROJECT": {
             "TITLE": {
