--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -79,5 +79,11 @@
     },
     "PRIVACY_POLICY": {
         "TITLE": "Datenschutz­erklärung"
+    },
+    "MENU": {
+        "ABOUT_ME": "Über mich",
+        "SKILLS": "Fähigkeiten",
+        "MY_WORK": "Meine Projekte",
+        "CONTACT": "Kontakt"
     }
 }
