edited responsive design on imprint component

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -47,7 +47,7 @@
         }
     },
     "REFERENCES": {
-        "TITLE": "Brauchst du einen Teamplayer?",
+        "TITLE": "Need a Teamplayer?",
         "SUBTITLE": "Das sagen meine Kollegen über mich",
         "REFERENCE_1": "\"Galina war bei unserem Projekt immer mit vollem Einsatz bei der Sache. Sie hat ihre Aufgaben sehr sorgfältig und selbstständig erledigt und hatte dabei ein gutes Zeitmanagement. Mit ihrer Detailorientierung hat sie dafür gesorgt, dass nichts übersehen wird. Auch in stressigen Phasen war sie immer positiv gestimmt und hat gute Laune versprüht. Durch ihre Empathie und Hilfsbereitschaft war sie außerdem wichtig für die Moral im Team. Ihre große Zielstrebigkeit hat entscheidend zum Erfolg des Projekts beigetragen.\"",
         "REFERENCE_2": "\"Galina war eine großartige Teamkollegin. Ihr Ehrgeiz und ihre selbstständige und sichere Art, Herausforderungen anzugehen und zu bewältigen, haben unser Projekt vorangetrieben und wesentlich dazu beigetragen, zur Deadline sauber funktionierende Ergebnisse zu haben. Ich würde mich freuen, wieder mit Galina zu arbeiten.\"",
