edited text section

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,7 +7,7 @@
         "LANGUAGE_EN": "EN"
     },
     "LANDING_PAGE": {
-        "HELLO": "Hallo! Ich bin Galina",
+        "HELLO": "Hello! I am Galina",
         "FRONTEND": "FRONTEND",
         "DEVELOPER": "DEVELOPER",
         "SCROLL": "SCROLLEN",
@@ -19,7 +19,7 @@
         "I_AM": "Ich bin",
         "LOCATION": "in Thüringen ansässig",
         "REMOTE": "bereit für Remote Arbeit",
-        "INTRO": "Hallo, ich bin eine deutschsprachige Frontend-Entwicklerin aus Thüringen. Ich bin von den endlosen Möglichkeiten in der IT fasziniert und leidenschaftlich daran interessiert, visuell ansprechende und benutzerfreundliche Websites und Anwendungen zu erstellen. Meine Fähigkeit, komplexe Probleme zu lösen, und meine Leidenschaft für das Programmieren machen mich zu einem wertvollen Mitglied deines Teams.",
+        "INTRO": "Hallo, ich bin eine deutschsprachige Frontend-Entwicklerin aus Thüringen und ich liebe es, Kreativität mit modernen Technologien zu verbinden. Durch meine Begeisterung für ansprechendes Design und nutzerfreundliche Oberflächen setze ich alles daran, beeindruckende digitale Erlebnisse zu kreieren.",
         "CONTACT_MESSAGE": "Wenn du denkst, dass ich gut zu deinen Projekten passe, kontaktiere mich!",
         "SEND_MESSAGE": "Nachricht senden"
     },
