--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,7 @@
         "I_AM": "I am",
         "LOCATION": "located in Thuringia",
         "REMOTE": "open to work remote",
-        "INTRO": "Hi, I'm a Frontend Developer located near Erfurt. I'm inspired by the endless possibilities in IT and passionate about creating visually stunning and user-friendly websites and applications. My ability to solve complex problems and my passion for programming make me a valuable member of your team.",
+        "INTRO": "Hello, I am a German-speaking frontend developer from Thuringia, and I love bringing together creativity and modern technologies. With my passion for attractive design and user-friendly interfaces, I work to create great digital experiences.",
         "CONTACT_MESSAGE": "If you think I’d be a good match for your projects, contact me!",
         "SEND_MESSAGE": "Send a message"
     },
