changed the german translation on contact form

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -56,7 +56,7 @@
     },
     "CONTACT": {
         "TITLE": "Kontakt",
-        "PROBLEM": "Got a problem to solve?",
+        "PROBLEM": "Hast du ein Anliegen?",
         "INTRO": "Kontaktiere mich über dieses Formular. Ich freue mich von deinen Ideen zu hören und gemeinsam an deinen Projekten zu arbeiten.",
         "NEED_DEV": "Brauchst du eine Frontend-Entwicklerin?",
         "CONTACT_ME": "Kontaktiere mich!",
