fixed button text translation on send button

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -72,7 +72,8 @@
         "ACCEPT_PRIVACY": "Bitte akzeptiere die Datenschutzrichtlinien.",
         "FEEDBACK_SUCCESS_THANK_YOU": "Vielen Dank,",
         "FEEDBACK_SUCCESS_MESSAGE": "Deine Nachricht wurde gesendet.",
-        "FEEDBACK_ERROR": "Es gab ein Problem mit dem Senden deiner Nachricht."
+        "FEEDBACK_ERROR": "Es gab ein Problem mit dem Senden deiner Nachricht.",
+        "BUTTON_TEXT": "Sag hallo :)"
     },
     "FOOTER": {
         "IMPRINT": "Impressum"
